--- a/views/manage_students.ejs
+++ b/views/manage_students.ejs
@@ -29,12 +29,11 @@
         <td><%= student.first_name %></td>
         <td><%= student.last_name %></td>
         <td><%= student.start_date %></td>
-        <td><%= student.gpa %></td>
-        <td><%= student.sat %></td>
-        <td><%= student.major_id %></td>
-        <td class="text-center">
-          <button class="btn btn-primary" id="editButton" data-studentid="<%= student.student_id %>">edit</button>
-          <button class="btn btn-danger" id="deleteButton" data-studentid="<%= student.student_id %>">delete</button>
+        <td><%= student.gpa == null ? "" : student.gpa %></td>
+        <td><%= student.sat == null ? "" : student.sat %></td>
+        <td><%= student.hasOwnProperty('major_id') ? student.major_id.major : "" %></td>
+        <td class="text-center" style="white-space: nowrap;">
+          <button class="btn btn-primary" id="editButton" data-studentid="<%= student.student_id %>">edit</button>&nbsp<button class="btn btn-danger" id="deleteButton" data-studentid="<%= student.student_id %>">delete</button>
         </td>
       </tr>
     <% }) %>
@@ -83,7 +82,17 @@
   <div class="form-group">
     <label for="major_id" class="col-sm-2 control-label">Major ID</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="major_id" name="major_id">
+<!--      <input type="text" class="form-control" id="major_id" name="major_id">-->
+    <select id="major_id" name="major_id" class="selectpicker" placehoder="Nothing selected">
+        <option value="" selected disabled>Select a major</option>
+    <% if(typeof majors != "undefined" && majors.length > 0){ %>
+      <% majors.forEach(function(major){ %>
+        <option value="<%= major.major_id %>">
+          <%= major.major %>
+        </option>
+      <% }) %>
+    <% } %>
+    </select>
     </div>
   </div>
 </form>
