all pages basically working

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -50,8 +50,9 @@
         <!--jquery-ui js-->
         <script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-            <!--custom js (your work)-->
-            <script src="js/manage_students.js"></script>
+        <!--custom js (your work)-->
+<!--        <script src="js/manage_students.js"></script>-->
+        <script src="js/manage_generic.js"></script>
 
         <!-- INCLUDE JS LIBRARIES HERE END -->
 
