--- a/views/manage_students.ejs
+++ b/views/manage_students.ejs
@@ -7,8 +7,8 @@
 <%- partial ('partials/statusmessage.ejs') %>
 
 <h2>Manage Students</h2>
-<button class="btn btn-success" id="addStudentButton">Add Student</button>
-<table class="table table-striped table-bordered" id="studentTable" style="width:100%">
+<button class="btn btn-success" data-model="student"  id="addModelButton">Add Student</button>
+<table class="table table-striped table-bordered" id="modelTable" style="width:100%">
   <thead>
     <tr>
       <th>ID</th>
@@ -22,18 +22,18 @@
     </tr>
   </thead>
   <tbody>
-  <% if(typeof students != "undefined" && students.length > 0){ %>
-    <% students.forEach(function(student){ %>
+  <% if(typeof modelData != "undefined" && modelData.length > 0){ %>
+    <% modelData.forEach(function(modelRec){ %>
       <tr>
-        <td><%= student.student_id %></td>
-        <td><%= student.first_name %></td>
-        <td><%= student.last_name %></td>
-        <td><%= student.start_date %></td>
-        <td><%= student.gpa == null ? "" : student.gpa %></td>
-        <td><%= student.sat == null ? "" : student.sat %></td>
-        <td><%= student.hasOwnProperty('major_id') ? student.major_id.major : "" %></td>
+        <td><%= modelRec.student_id %></td>
+        <td><%= modelRec.first_name %></td>
+        <td><%= modelRec.last_name %></td>
+        <td><%= modelRec.start_date %></td>
+        <td><%= modelRec.gpa == null ? "" : modelRec.gpa %></td>
+        <td><%= modelRec.sat == null ? "" : modelRec.sat %></td>
+        <td><%= modelRec.hasOwnProperty('major_id') ? modelRec.major_id.major : "" %></td>
         <td class="text-center" style="white-space: nowrap;">
-          <button class="btn btn-primary" id="editButton" data-studentid="<%= student.student_id %>">edit</button>&nbsp<button class="btn btn-danger" id="deleteButton" data-studentid="<%= student.student_id %>">delete</button>
+          <button class="btn btn-primary" id="editButton"  data-model="student" data-modelid="<%= modelRec.student_id %>">edit</button>&nbsp<button class="btn btn-danger" id="deleteButton"  data-model="student" data-modelid="<%= modelRec.student_id %>">delete</button>
         </td>
       </tr>
     <% }) %>
@@ -47,7 +47,7 @@
   <input type="hidden" name="student_id" value="eric">
 </form>
 
-<form style="display: none;" action="" method="POST" class="form-horizontal" id="manageStudentForm">
+<form style="display: none;" action="" method="POST" class="form-horizontal" id="manageModelForm">
   <input type="hidden" name="student_id">
   <div class="form-group">
     <label for="first_name" class="col-sm-2 control-label">First Name</label>
