--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -11,8 +11,13 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
-                <li><a href="/manage_students">Manage Students</a></li>
+                <li><a href="/manage_students">Students</a></li>
+                <li><a href="/manage_instructors">Instructors</a></li>
+                <li><a href="/manage_assignments">Assignments</a></li>
+                <li><a href="/manage_grades">Grades</a></li>
+                <li><a href="/manage_classs">Classes</a></li>
+                <li><a href="/manage_major_classs">Major Classes</a></li>
+                <li><a href="/manage_student_classs">Student Classes</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
