--- a/views/manage_instructors.ejs
+++ b/views/manage_instructors.ejs
@@ -1,6 +1,7 @@
 <ol class="breadcrumb">
-    <li class="active">Home</a>
+    <li class="active"><a href="/">Home</a>
     </li>
+    <li>Instructors</li>
 </ol>
 
 <br/>
