--- a/views/manage_majors.ejs
+++ b/views/manage_majors.ejs
@@ -1,5 +1,6 @@
 <ol class="breadcrumb">
-    <li class="active">Home</a></li>
+    <li class="active"><a href="/">Home</a></li>
+    <li>Majors</li>
 </ol>
 
 <br/>
