--- a/views/manage_classs.ejs
+++ b/views/manage_classs.ejs
@@ -1,5 +1,6 @@
 <ol class="breadcrumb">
-    <li class="active">Home</a></li>
+    <li class="active"><a href="/">Home</a></li>
+    <li>Classes</li>
 </ol>
 
 <br/>
@@ -52,7 +53,7 @@
     <div class="form-group">
         <label for="sat" class="col-sm-2 control-label">Course</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="course" name="course" placeholder="SAT">
+          <input type="text" class="form-control" id="course" name="course" placeholder="Course Number">
         </div>
     </div>
     <div class="form-group">
