--- a/views/manage_major_classs.ejs
+++ b/views/manage_major_classs.ejs
@@ -1,5 +1,6 @@
 <ol class="breadcrumb">
-    <li class="active">Home</a></li>
+    <li class="active"><a href="/">Home</a></li>
+    <li>Major Classes</li>
 </ol>
 
 <br/>
@@ -43,7 +44,7 @@
   <div class="form-group">
     <label for="major_id" class="col-sm-2 control-label">Major ID</label>
     <div class="col-sm-10">
-    <select id="major_id" name="major_id" class="selectpicker" placehoder="Nothing selected">
+    <select id="major_id" name="major_id" class="selectpicker" required>
         <option value="" selected disabled>Select a major</option>
     <% if(typeof majors != "undefined" && majors.length > 0){ %>
       <% majors.forEach(function(major){ %>
@@ -58,7 +59,7 @@
   <div class="form-group">
     <label for="class_id" class="col-sm-2 control-label">Class ID</label>
     <div class="col-sm-10">
-    <select id="class_id" name="class_id" class="selectpicker" placehoder="Nothing selected">
+    <select id="class_id" name="class_id" class="selectpicker" required>
         <option value="" selected disabled>Select a class</option>
     <% if(typeof classs != "undefined" && classs.length > 0){ %>
       <% classs.forEach(function(_class){ %>
