--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -6,3 +6,44 @@
 <%- partial ('partials/statusmessage.ejs') %>
 
 Welcome to our small college admin
+
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img width="600px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCz-UavVWltPwf17QFfjFVAmQP0eHOFrjg7M7Qvei9LxYaAOs9" alt="building1">
+      <div class="carousel-caption">
+        Slide 1
+      </div>
+    </div>
+    <div class="item">
+      <img width="600px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbfJONzE82RwuMk5L7ipUqKMbIl65-R3R-ixsBpULgznIQ6krubw" alt="building2">
+      <div class="carousel-caption">
+        Slide 2
+      </div>
+    </div>
+        <div class="item">
+      <img width="600px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSLMRKq7DnbKOJQO5cd0xfynJRXaM5urlUVrYwsVDSL0IPzIoec2Q" alt="building3">
+      <div class="carousel-caption">
+        Slide 3
+      </div>
+    </div>  
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
