blinged up front page

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -5,7 +5,7 @@
 <br/>
 <%- partial ('partials/statusmessage.ejs') %>
 
-Welcome to our small college admin
+<h1>Welcome to our small college admin system</h1>
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -18,23 +18,23 @@ Welcome to our small college admin
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img width="600px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCz-UavVWltPwf17QFfjFVAmQP0eHOFrjg7M7Qvei9LxYaAOs9" alt="building1">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAORQvi3IpRpEi3oVVC18ylVKkb7GU7ofQsEfSB0lIvG8h07mI" alt="outdoors" width="800px">
       <div class="carousel-caption">
-        Slide 1
+        Enjoy the beautiful outdoor spaces
       </div>
     </div>
     <div class="item">
-      <img width="600px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbfJONzE82RwuMk5L7ipUqKMbIl65-R3R-ixsBpULgznIQ6krubw" alt="building2">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQL0CXhAbirVL_71GAKseErEjMKQVnNgNYuxi_sIonlALI-mvZxag" alt="dormitory" width="800px">
       <div class="carousel-caption">
-        Slide 2
+        Your new dormitory
       </div>
     </div>
-        <div class="item">
-      <img width="600px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSLMRKq7DnbKOJQO5cd0xfynJRXaM5urlUVrYwsVDSL0IPzIoec2Q" alt="building3">
+    <div class="item">
+      <img src="http://drexel.edu/~/media/Images/coresite/backgrounds/Home/2017-02/biomed-classroom.ashx" alt="labs" width="800px">
       <div class="carousel-caption">
-        Slide 3
+        Our state of the art labs
       </div>
-    </div>  
+    </div>
   </div>
 
   <!-- Controls -->
@@ -46,4 +46,15 @@ Welcome to our small college admin
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+</div>
+
+<div class="container">
+    <hr>
+        <div class="text-center center-block">
+                <a href="https://www.facebook.com/bootsnipp"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+	            <a href="https://twitter.com/bootsnipp"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+	            <a href="https://plus.google.com/+Bootsnipp-page"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
+	            <a href="mailto:bootsnipp@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+</div>
+    <hr>
 </div>
