--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,9 +17,11 @@
     <!--data tables layouts -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/dt-1.10.12/b-1.2.2/b-print-1.2.2/cr-1.3.2/datatables.min.css" />
     
-            
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
     <!--styles.css should always be last-->
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
+
         <!-- INCLUDE STYLES HERE END -->
 
     </head>
